--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Next.js App
 on:
   push:
     branches:
-      - main  # You can change 'main' to the branch you want to deploy from
+      - main
 
 jobs:
   deploy:
@@ -11,28 +11,26 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '16'  # Adjust the version as per your project requirements
+          node-version: '16'
 
       - name: Install dependencies
         run: |
-          npm install
+          npm install --legacy-peer-deps
 
-      - name: Build Next.js app
-        run: |
-          npm run build
+      - name: Build the project
+        run: npm run build
 
       - name: Deploy to server
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         run: |
-          echo "$SSH_PRIVATE_KEY" > private_key.pem
-          chmod 600 private_key.pem
-          rsync -avz -e "ssh -i private_key.pem -o StrictHostKeyChecking=no" ./out/ $USERNAME@$HOST:/path/to/deployment/folder
-          rm private_key.pem
+          ssh -o StrictHostKeyChecking=no -i "$PRIVATE_KEY" ubuntu@$HOST << 'EOF'
+            cd /var/www/html/devoverflow
+            git pull origin main
+            npm install --legacy-peer-deps
+            npm run build
+            pm2 restart nextjs-app
+          EOF
